--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,10 @@ edition = "2021"
 [dependencies]
 readonly = "0.2"
 
+[dev-dependencies]
+quickcheck = "1.0.3"
+quickcheck_macros = "1.0.0"
+rand = "0.8.5"
+
 [lib]
 doctest = false
